--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.11.4",
+    "@material-ui/pickers": "3.3.10",
+    "axios": "0.21.1",
     "history": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "4.0.0",
     "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-toastify": "7.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
