--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "4.11.4",
     "@material-ui/pickers": "3.3.10",
     "axios": "0.21.1",
+    "emoji-picker-react": "3.4.4",
     "history": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
