--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.3",
-    "react-toastify": "7.0.4"
+    "react-toastify": "7.0.4",
+    "socket.io-client": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
